Add impl for service and move ResDTO to app utils
